# 1d-tokenizer

./: .gitignore  README.md  demo_util.py  eval.py  eval.sh  maskgit_sweep.py  pareto.py  plot.py  plot_heatmap.py  pyproject.toml  requirements-lock.txt  requirements.txt  sample_imagenet_titok.py  visualize_samples.py
configs/infer/TiTok/: titok_l32.yaml
modeling/: maskgit.py
